RESOLVED FIXED225234
ASSERTION FAILED: Unhandled message RemoteRemoteCommandListenerProxy_UpdateSupportedCommands
https://bugs.webkit.org/show_bug.cgi?id=225234
Summary ASSERTION FAILED: Unhandled message RemoteRemoteCommandListenerProxy_UpdateSu...
Peng Liu
Reported 2021-04-30 09:17:59 PDT
An assertion failure happens when we run media layout tests on an iPad simulator. stderr: ASSERTION FAILED: Unhandled message RemoteRemoteCommandListenerProxy_UpdateSupportedCommands to 103 assertionFailureDueToUnreachableCode /Volumes/Data/worker/ios-simulator-14-debug/build/WebKitBuild/Debug-iphonesimulator/DerivedSources/WebKit2/GPUConnectionToWebProcessMessageReceiver.cpp(132) : virtual void WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection &, IPC::Decoder &) 1 0x11efd5119 WTFCrash 2 0x1094d5c45 WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 3 0x108d078c4 IPC::Connection::dispatchMessage(IPC::Decoder&) 4 0x108d080ac IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 5 0x108d08700 IPC::Connection::dispatchOneIncomingMessage() 6 0x108d28bd8 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_10::operator()() 7 0x108d28ace WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_10, void>::call() 8 0x11f000f72 WTF::Function<void ()>::operator()() const 9 0x11f084295 WTF::RunLoop::performWork() 10 0x11f088b51 WTF::RunLoop::performWork(void*) 11 0x103c1837a __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 12 0x103c18272 __CFRunLoopDoSource0 13 0x103c17754 __CFRunLoopDoSources0 14 0x103c11f1f __CFRunLoopRun 15 0x103c116c6 CFRunLoopRunSpecific 16 0x1035ff7b9 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 17 0x1035ff9cd -[NSRunLoop(NSRunLoop) run] 18 0x10552c176 _xpc_objc_main 19 0x10552e115 xpc_main 20 0x1099e8c8b WebKit::XPCServiceMain(int, char const**) 21 0x10b1191ab WKXPCServiceMain 22 0x103430d52 main 23 0x1051d9409 start LEAK: 1 WebPageProxy
Attachments
Patch (2.03 KB, patch)
2021-04-30 12:08 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2021-04-30 12:08:11 PDT
EWS
Comment 2 2021-04-30 14:49:49 PDT
Committed r276854 (237205@main): <https://commits.webkit.org/237205@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427437 [details].
Radar WebKit Bug Importer
Comment 3 2021-04-30 14:50:43 PDT
Note You need to log in before you can comment on or make changes to this bug.