ASSERTION FAILED: Unhandled message RemoteRemoteCommandListenerProxy_UpdateSupportedCommands https://bugs.webkit.org/show_bug.cgi?id=225234

Reviewed by Darin Adler.

We need to keep dispatching (and ignoring) messages for `RemoteRemoteCommandListenerProxy`
after the object is destroyed. That could happen because other web processes may still have
active `RemoteRemoteCommandListener` after `GPUConnectionToWebProcess::m_remoteRemoteCommandListener`
is destroyed.

No new tests. Fix an assertion failure in tests.

* GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::dispatchMessage):


Canonical link: https://commits.webkit.org/237205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276854 268f45cc-cd09-0410-ab3c-d52691b4dbfc